# parakeet-server

./: .gitignore  AGENTS.md  API.md  Cargo.toml  Dockerfile  LICENSE  README.md  download_samples.sh  run.sh  test_transcribe.sh
.github/workflows/: docker-publish.yml
src/: audio.rs  lib.rs  main.rs  model_archive.rs
static/: index.html
