[package]
name = "parakeet-server"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
rocket-multipart-form-data = "0.10"
transcribe-rs = { version = "0.2.9", features = ["parakeet"] }
hound = "3.5"
symphonia = { version = "0.5", features = ["all"] }
tokio = { version = "1", features = ["full"] }
once_cell = "1.19"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
futures-util = "0.3"
flate2 = "1.1.9"
tar = "0.4.44"
